# Rust-Web-Server

./: Readme.md
Simple_Web_Server_Rust/: .env.sample  Cargo.toml  local.yml
Simple_Web_Server_Rust/src/: endpoint.rs  main.rs  schema.rs
Simple_Web_Server_Rust/src/models/: mod.rs  models.rs
Simple_Web_Server_Rust/src/routes/: user.rs
Simple_Web_Server_Rust/src/services/: users.rs
