[package]
name = "Simple_Web_Server_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
postgres = "0.14"
diesel = {version = "2.0.4", features =[ "postgres"] }
dotenvy = "0.15.7"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

